--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -386,6 +386,9 @@
   "ListingPage.schemaTitle": "{title} - {price} | {siteTitle}",
   "ListingPage.viewImagesButton": "View photos ({count})",
   "ListingPage.yourHostHeading": "Your host",
+  "LoadableComponentErrorBoundaryPage.title": "Page not fetched",
+  "LoadableComponentErrorBoundaryPage.heading": "Oops, we couldn't fetch the page.",
+  "LoadableComponentErrorBoundaryPage.description": "It looks like the app needs to be updated! Please, make a full page reload.",
   "LocationAutocompleteInput.currentLocation": "Current location",
   "LocationSearchForm.placeholder": "Search saunas…",
   "LoginForm.emailInvalid": "A valid email address is required",
